added initial js to incorporate API key

--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
       </header>
       <main>
         <section class="weather-today">
-          <h2>
+          <h2 class="current-city">
             City <span class="current-date">(MM/DD/YYYY)</span
             ><span class="current-weather-icon"> ☀️</span>
           </h2>
-          <p class="temperature">Temp: <span>100</span> ℉</p>
-          <p class="wind-speed">Wind: <span>10.0</span> MPH</p>
-          <p class="humidity">Humidity: <span>88</span> %</p>
+          <p class="temperature">
+            Temp: <span class="current-temp">100</span> ℉
+          </p>
+          <p class="wind-speed">
+            Wind: <span class="current-wind-speed">9.0</span> MPH
+          </p>
+          <p class="humidity">
+            Humidity: <span class="current-humidity">88</span> %
+          </p>
         </section>
         <section class="five-day-forecast">
           <h2>5-Day Forecast:</h2>
