coded functions to convert unix time

--- a/index.html
+++ b/index.html
@@ -44,37 +44,37 @@
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temperature">Temp:<span></span></p>
-              <p class="wind-speed">Wind:</p>
-              <p class="humidity">Humidity</p>
+              <p class="temp">Temp:<span></span></p>
+              <p class="wind">Wind:</p>
+              <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temperature">Temp:<span></span></p>
-              <p class="wind-speed">Wind:</p>
-              <p class="humidity">Humidity</p>
+              <p class="temp">Temp:<span></span></p>
+              <p class="wind">Wind:</p>
+              <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temperature">Temp:<span></span></p>
-              <p class="wind-speed">Wind:</p>
-              <p class="humidity">Humidity</p>
+              <p class="temp">Temp:<span></span></p>
+              <p class="wind">Wind:</p>
+              <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temperature">Temp:<span></span></p>
-              <p class="wind-speed">Wind:</p>
-              <p class="humidity">Humidity</p>
+              <p class="temp">Temp:<span></span></p>
+              <p class="wind">Wind:</p>
+              <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temperature">Temp:<span></span></p>
-              <p class="wind-speed">Wind:</p>
-              <p class="humidity">Humidity</p>
+              <p class="temp">Temp:<span></span></p>
+              <p class="wind">Wind:</p>
+              <p class="humid">Humidity</p>
             </article>
           </div>
         </section>
