added 5 day weather

--- a/index.html
+++ b/index.html
@@ -44,35 +44,35 @@
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temp">Temp:<span></span></p>
+              <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temp">Temp:<span></span></p>
+              <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temp">Temp:<span></span></p>
+              <p class="temp">Temp:></p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temp">Temp:<span></span></p>
+              <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
               <span>☀️</span>
-              <p class="temp">Temp:<span></span></p>
+              <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
