wrote code to get weather icons to show up

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
           <div class="current-day-info-header">
             <h2 class="current-city">City</h2>
             <p class="current-date">(MM/DD/YYYY)</p>
-            <p class="current-weather-icon">☀️</p>
+            <img
+              src="https://openweathermap.org/img/wn/10d.png "
+              class="current-weather-icon"
+            />
           </div>
 
           <p class="temperature">
@@ -43,35 +46,50 @@
           <div class="forecast-boxes">
             <article>
               <p class="date">MM/DD/YYYY</p>
-              <span>☀️</span>
+              <img
+                src="https://openweathermap.org/img/wn/10d.png "
+                class="icon"
+              />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
-              <span>☀️</span>
+              <img
+                src="https://openweathermap.org/img/wn/10d.png "
+                class="icon"
+              />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
-              <span>☀️</span>
+              <img
+                src="https://openweathermap.org/img/wn/10d.png "
+                class="icon"
+              />
               <p class="temp">Temp:></p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
-              <span>☀️</span>
+              <img
+                src="https://openweathermap.org/img/wn/10d.png "
+                class="icon"
+              />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
-              <span>☀️</span>
+              <img
+                src="https://openweathermap.org/img/wn/10d.png "
+                class="icon"
+              />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
               <p class="humid">Humidity</p>
