--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       content="upgrade-insecure-requests"
     />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="./assets/css/styles.css
     "
@@ -30,7 +36,6 @@
               class="current-weather-icon"
             />
           </div>
-
           <p class="temperature">
             Temp: <span class="current-temp">100</span> ℉
           </p>
@@ -52,7 +57,7 @@
               />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
-              <p class="humid">Humidity</p>
+              <p class="humid">Humidity:</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
@@ -62,17 +67,7 @@
               />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
-              <p class="humid">Humidity</p>
-            </article>
-            <article>
-              <p class="date">MM/DD/YYYY</p>
-              <img
-                src="https://openweathermap.org/img/wn/10d.png "
-                class="icon"
-              />
-              <p class="temp">Temp:></p>
-              <p class="wind">Wind:</p>
-              <p class="humid">Humidity</p>
+              <p class="humid">Humidity:</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
@@ -82,7 +77,7 @@
               />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
-              <p class="humid">Humidity</p>
+              <p class="humid">Humidity:</p>
             </article>
             <article>
               <p class="date">MM/DD/YYYY</p>
@@ -92,7 +87,17 @@
               />
               <p class="temp">Temp:</p>
               <p class="wind">Wind:</p>
-              <p class="humid">Humidity</p>
+              <p class="humid">Humidity:</p>
+            </article>
+            <article>
+              <p class="date">MM/DD/YYYY</p>
+              <img
+                src="https://openweathermap.org/img/wn/10d.png "
+                class="icon"
+              />
+              <p class="temp">Temp:</p>
+              <p class="wind">Wind:</p>
+              <p class="humid">Humidity:</p>
             </article>
           </div>
         </section>
