--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             placeholder="Philadelphia"
           />
           <button type="button" class="search">Search</button>
+          <button type="button" class="clear">Clear History</button>
         </section>
         <section class="city-search-history">
           <button class="city-name">City</button>
